########################
# Current Developments #
########################

(Work toward next release. Currently under development.)

ADDED:

CHANGED:

DEPRECATED:

REMOVED:

FIXED:

  * Fixed an issue with autolocking and auto answer viewing.

SECURITY:

DOCUMENTATION:


####################
# Version 2021.9.0 #
####################

ADDED:

  * File uploads in the built-in question types now support
    dragging-and-dropping files (in addition to the normal file-chooser setup)

  * Logging of page views (in the problemactions) can now be enabled by setting
    cs_log_page_views = True

  * Allow running via "python3 -m catsoop" in addition to "catsoop"

  * Added experimental support for running checkers on separate machines from
    the web server

  * Added a delete_log function to the cslog module

  * Added a "user settings" page for managing user information, API tokens,
    look-and-feel, and more

  * Unauthenticated users now receive the "Unauthenticated" role, which can be
    used to control permissions

  * Added a way to impersonate a user while preserving their permissions, via
    the preserve_permissions query string parameter

CHANGED:

  * On the main page, links are now shown even to courses that can't be
    properly loaded, so that the underlying issue is easier to find (clicking
    on the link shows a more detailed error message)

  * Auto-generated csq_name fields now increment only for questions that don't
    have names specified (reverts a change from 2020.9.0)

  * The pythonic and pythonliteral question types now allow checking for valid
    formatting

  * Reverted changes to cslog module and how the checker queue process works

  * Logs now store information about file uploads in a more intuitive format

  * cs_upload_management returns as a way to control where uploaded files are
    stored (directly in the database, or as separate files)

  * Changed the location of the default remote sandbox for running Python code
